@@ -246,6 +246,7 @@ const char *Hardware_Type_Desc(int hType)
 		{ HTYPE_RaspberryBME280, "I2C sensor BME280 Temp+Hum+Baro" },
 		{ HTYPE_Arilux, "Arilux AL-LC0x" },
 		{ HTYPE_OpenWebNetUSB, "MyHome OpenWebNet USB" },
+		{ HTYPE_IntergasInComfortLAN2RF, "Intergas InComfort LAN2RF Gateway" },
 		{ 0, NULL, NULL }
 	};
 	return findTableIDSingle1 (Table, hType);
