@@ -179,6 +179,7 @@ enum _eHardwareTypes {
 	HTYPE_RaspberryBME280,		//96
 	HTYPE_Arilux,				//97
 	HTYPE_OpenWebNetUSB,		//98
+	HTYPE_IntergasInComfortLAN2RF,			//99
 	HTYPE_END
 };
 
