@@ -459,6 +459,9 @@
     <Filter Include="Devices\Arilux">
       <UniqueIdentifier>{f1bd7f3f-a032-4804-9b52-51c06399ca5e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Devices\InComfort">
+      <UniqueIdentifier>{bbff9485-9778-469f-9659-e3575b33a348}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\CMakeLists.txt">
@@ -1963,6 +1966,9 @@
     <ClInclude Include="..\hardware\OpenWebNetTCP.h">
       <Filter>Devices\OpenWebNet</Filter>
     </ClInclude>
+    <ClInclude Include="..\hardware\InComfort.h">
+      <Filter>Devices\InComfort</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\webserver\Base64.cpp">
@@ -2588,6 +2594,9 @@
     </ClCompile>
     <ClCompile Include="..\hardware\OpenWebNetTCP.cpp">
       <Filter>Devices\OpenWebNet</Filter>
+    </ClCompile>
+    <ClCompile Include="..\hardware\InComfort.cpp">
+      <Filter>Devices\InComfort</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
